fix: undo upstream addition of gnome-software to cosmic images (#831)

--- a/recipes/common/cosmic-modules.yml
+++ b/recipes/common/cosmic-modules.yml
@@ -3,6 +3,11 @@ modules:
       install:
         - NetworkManager-tui
         - NetworkManager-openvpn
+        - cosmic-store
+      remove:
+        - gnome-software
+        - gnome-software-rpm-ostree
+        - gnome-software-fedora-langpacks
     - type: systemd
       system:
         enabled:
