chore: cleanup cosmic packages (#848)

--- a/recipes/common/cosmic-modules.yml
+++ b/recipes/common/cosmic-modules.yml
@@ -4,10 +4,12 @@ modules:
         - NetworkManager-tui
         - NetworkManager-openvpn
         - cosmic-store
+        - cosmic-player
       remove:
         - gnome-software
         - gnome-software-rpm-ostree
         - gnome-software-fedora-langpacks
+        - epiphany-runtime
     - type: systemd
       system:
         enabled:
