--- a/.github/workflows/checksum.yml
+++ b/.github/workflows/checksum.yml
@@ -5,7 +5,7 @@ on:
       - live
 jobs:
   verify-installer-checksum:
-    name: Linkspector
+    name: Installer Checksum Verification
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
