--- a/recipes/general/recipe-sericea-nvidia-open.yml
+++ b/recipes/general/recipe-sericea-nvidia-open.yml
@@ -11,7 +11,7 @@ modules:
   - from-file: common/desktop-modules.yml
   - from-file: common/nvidia-open-modules.yml 
   - from-file: common/proprietary-modules.yml
-  - from-file: common/hardenuserns-modules.yml
+  - from-file: common/selinux-modules.yml
   - from-file: common/final-modules.yml
   - type: script
     scripts:
