--- a/recipes/general/recipe-kinoite-main.yml
+++ b/recipes/general/recipe-kinoite-main.yml
@@ -11,5 +11,5 @@ modules:
   - from-file: common/kinoite-modules.yml
   - from-file: common/desktop-modules.yml
   - from-file: common/proprietary-modules.yml
-  - from-file: common/hardenuserns-modules.yml
+  - from-file: common/selinux-modules.yml
   - from-file: common/final-modules.yml
