--- a/recipes/general/recipe-silverblue-nvidia.yml
+++ b/recipes/general/recipe-silverblue-nvidia.yml
@@ -12,5 +12,5 @@ modules:
   - from-file: common/desktop-modules.yml
   - from-file: common/nvidia-modules.yml 
   - from-file: common/proprietary-modules.yml
-  - from-file: common/hardenuserns-modules.yml
+  - from-file: common/selinux-modules.yml
   - from-file: common/final-modules.yml
