--- a/recipes/general/recipe-wayblue-hyprland-nvidia.yml
+++ b/recipes/general/recipe-wayblue-hyprland-nvidia.yml
@@ -9,5 +9,5 @@ image-version: 41
 modules:
   - from-file: common/common-modules.yml
   - from-file: common/desktop-modules.yml
-  - from-file: common/hardenuserns-modules.yml
+  - from-file: common/selinux-modules.yml
   - from-file: common/final-modules.yml
