--- a/recipes/general/recipe-wayblue-wayfire-main.yml
+++ b/recipes/general/recipe-wayblue-wayfire-main.yml
@@ -9,6 +9,6 @@ image-version: 41
 modules:
   - from-file: common/common-modules.yml
   - from-file: common/desktop-modules.yml
-  - from-file: common/hardenuserns-modules.yml
+  - from-file: common/selinux-modules.yml
   - from-file: common/wayfire-scripts.yml
   - from-file: common/final-modules.yml
