--- a/recipes/securecore/recipe-securecore-nvidia-open.yml
+++ b/recipes/securecore/recipe-securecore-nvidia-open.yml
@@ -10,5 +10,5 @@ modules:
   - from-file: common/common-modules.yml
   - from-file: common/server-modules.yml
   - from-file: common/nvidia-open-server-modules.yml 
-  - from-file: common/hardenuserns-modules.yml
+  - from-file: common/selinux-modules.yml
   - from-file: common/final-modules.yml
