--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
            file-path: "${{ github.workspace }}/.bats/bats-file"
 
       - name: Just Installation
-        uses: extractions/setup-just@v2
+        uses: extractions/setup-just@6e1de3cc407de738551abd6c0923bd5ed5608042
 
       - name: Run tests
         shell: bash
